syslog.txt
[ERROR]   File "/home/dwlee/repos/loa-server/loa_server/repos/cau-osp2020-soohnzzang/student_cacafadi/team.py", line 1
    <<<<<<< HEAD
    ^
SyntaxError: invalid syntax
